--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,18 @@
     <string name="ps">Password</string>
     <string name="si">Masuk</string>
 
+    <string name="title_activity_home">Beranda</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Beranda</string>
+    <string name="menu_transaksi">Transaksi</string>
+    <string name="menu_riwayat">Riwayat Transaksi</string>
+    <string name="menu_pengaturan">Pengaturan</string>
+    <string name="menu_laporan">Laporan</string>
+
 </resources>
